- NEW: 
  - ProteinQuantifier: computes protein/peptide abundances from annotated featureXML or consensusXML files
  - GenericWrapper (e.g. to wrap ProteinProphet in TOPPAS)
  - ConsensusID: [rewritten] combine several peptide search engine results to improve precision and recall
- REMOVED:
  - TextImporter (functionality moved to FileConverter)
  
UTIL tools:
- NEW:
  - ImageCreator: creates PNG's from MS maps
  - IDSplitter: splits peptide/protein annotations off of data files (inverse operation as IDMapper)
  - MassCalculator: calculates masses and mass-to-charge ratios of peptide sequences

OpenMS library improvements:
- read protXML files
- support protein groups in ProteinIdentification/idXML
- line numbers in errors of Textbased files (most formats: dta, dta2D, FASTAFile, PepNovoOutfile, MascotGenericFile, MS2File, MSPFile, OMSSACSVFile, TextImporter (csv, msInspect, SpecArray?, Kroenik))
- String Class
  - removed:
     String substr(SignedSize start, SignedSize n) const; 
     String substr(SignedSize start) const; 
  - added:
     String substr(size_t pos = 0, size_t n = npos) const;   
     String chop(Size n) const;
- FeatureFinderAlgorithmPicked is now able to fit asymmetric retention time profiles 

TOPPView improvements:
- basic visualization of peptide identifications in idXML
- when the amount of loaded data causes memory depletion, an error is issued and TOPPView does not crash (only a problem on 32bit systems)
- zooming beyond the last zoom stack item using the mouse wheel or CTRL+

TOPPAS improvements:
- added copy/paste for workflow items
- workflows can now include other workflows (File>Include)
- several bug fixes
- Split TOPPAS in TOPPAS and PipelineExecute TOPP-tool

Changes to the Build System:
- external code support for CMake 2.8: External Code using 
  "include (${OpenMS_USE_FILE})" in its CMakeLists.txt 
  cannot be configured against OpenMS 1.7, however, 
  only minor changes are required to fix this.